--- a/index.html
+++ b/index.html
@@ -5,13 +5,22 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.1.1.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Enter Title</title>
+    <title>Movie Times</title>
   </head>
 
   <body>
     <div class="container">
+      <h1>Movie Show Times</h1>
+      <ul>
 
+      </ul>
 
+      <div class="row">
+        <div class="col-md-4" id="movie-times">
+          <h2></h2>
+          <span class="movie-times"></span>
+        </div>
+      </div>
 
 
     </div>
